@@ -908,6 +908,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8716. Introduce a new config specifically for safe mode block count
     (Chang Li via kihwal)
 
+    HDFS-7116. Add a command to get the balancer bandwidth
+    (Rakesh R via vinayakumarb)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
